# ibet-SmartContract

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .prettierrc  CONTRIBUTING.md  CONTRIBUTING_ja.md  Dockerfile  Dockerfile_mythril  Makefile  README.md  README_JA.md  brownie-config.yaml  docker-compose.yml  hardhat.config.js  lock.sh  package-lock.json  package.json  project.json  pyproject.toml  qa.sh  qa_mythril.sh  requirements.txt  requirements_mythril.txt
.github/: auto_assign.yml  dependabot.yml  pull_request_template.md
contracts/: ContractReceiver.sol  E2EMessaging.sol  ExchangeRegulatorService.sol  ExchangeStorage.sol  ExchangeStorageModel.sol  IbetBeneficarySecurity.sol  IbetBeneficiarySecurity.sol  IbetCoupon.sol  IbetCouponExchange.sol  IbetDepositaryReceipt.sol  IbetExchange.sol  IbetMRF.sol  IbetMembership.sol  IbetMembershipExchange.sol  IbetOTCExchange.sol  IbetShare.sol  IbetStandardToken.sol  IbetStandardTokenInterface.sol  IbetStraightBond.sol  IbetStraightBondExchange.sol  IbetSwap.sol  MockExchange.sol  OTCExchangeStorage..sol  OTCExchangeStorage.sol  OTCExchangeStorageModel.sol  Ownable.sol  PaymentGateway.sol  PersonalInfo.sol  RegulatorService.sol  SafeMath.sol  TokenList.sol  TokenRegulatorService.sol  WhiteList.sol
data/: networks.yml  test_networks.yml
deploy/: contract_deploy.py  deploy.sh
docs/: Errors.md
e2e_tests/: brownie-config.yaml  config.py
interfaces/: ContractReceiver.sol  IbetExchangeInterface.sol  IbetSecurityTokenInterface.sol  IbetStandardTokenInterface.sol  RegulatorService.sol
sandbox/: ExchangeRegulatorService.sol  IbetOTCExchange.sol  IbetStraightBondExchange.sol  OTCExchangeStorage.sol  OTCExchangeStorageModel.sol  RegulatorService.sol
scripts/: IbetSwap_deploy.py  IbetSwap_deploy.sh  IbetSwap_setMarketMaker.py  IbetSwap_setMarketMaker.sh  IbetSwap_setSettlementToken.py  IbetSwap_setSettlementToken.sh  PaymentGateway_addAgent.py  addAgent.sh  contract_deploy.py  deploy.sh  deploy_shared_contract.py  deploy_shared_contract.sh  dex_upgrade.py  import_account.sh  payment_gateway_add_agent.py  payment_gateway_add_agent.sh  payment_geteway_add_agent.sh  upgradeDex.sh  upgrade_ibet_escrow.py  upgrade_ibet_escrow.sh  upgrade_ibet_exchange.py  upgrade_ibet_exchange.sh  upgrade_ibet_security_token_dvp.py  upgrade_ibet_security_token_dvp.sh  upgrade_ibet_security_token_escrow.py  (+1 more)
(+96 files in other folders)
